<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/emailInput"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="104dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    </EditText>

    <EditText
        android:id="@+id/passwordInput"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="284dp"
        android:gravity="center"
        android:inputType="textPassword"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

    </EditText>

    <Button
        android:id="@+id/loginButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="152dp"
        android:layout_marginTop="72dp"
        android:text="Login"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordInput" />

    <TextView
        android:id="@+id/emailText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="148dp"
        android:layout_marginEnd="56dp"
        android:text="Email:"
        app:layout_constraintEnd_toStartOf="@+id/emailInput"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/passwordText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="156dp"
        android:layout_marginEnd="56dp"
        android:text="Password:"
        app:layout_constraintEnd_toStartOf="@+id/passwordInput"
        app:layout_constraintTop_toBottomOf="@id/emailText" />
</androidx.constraintlayout.widget.ConstraintLayout>